<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weightLabel">Weight:</string>
    <string name="milesRanLabel">Miles Ran:</string>
    <string name="calories_burnedLabel">Calories Burned:</string>
    <string name="heightLabel">Height:</string>
    <string name="bmiLabel">BMI</string>
    <string name="weightET">000</string>
    <string name="milesTV">1</string>
    <string name="caloriesTV">00.0</string>
    <string name="bmiTV">00</string>
    <string name="nameET">Name</string>
    <string-array name="foot_array">
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>
    <string-array name="inches_array">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
    </string-array>
</resources>
